<resources>
    <string name="app_name">SMVP</string>

    <string name="tv_visa_policy">签证政策</string>
    <string name="tv_consulate_info">领馆信息</string>
    <string name="tv_visa_prediction">出签预测</string>
    <string name="tv_out_of_the_kit">出境锦囊</string>

    <!--LiveFragment-->
    <string name="foucs_live">关注</string>
    <string name="center_live">中心</string>
    <string name="vedio_live">小视频</string>
    <string name="serach_live">搜索</string>
    <string name="type_live">分类</string>
    <string name="title_activity_brower">BrowerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dd">DdActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
