<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/changeView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/imageView"
              android:layout_marginTop="@dimen/space_200"
              android:background="@color/whiteApp"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_visa_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/visa_policy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_visa_policy"
            android:textColor="#414141"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_consulate_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/consulate_info"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_consulate_info"
            android:textColor="#414141"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_visa_prediction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/visa_prediction"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_visa_prediction"
            android:textColor="#414141"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_out_of_the_kit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/out_of_the_kit"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_out_of_the_kit"
            android:textColor="#414141"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>